Primeira versão de cálculo dos custos fixos

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <input type="number" id="outros-despesas-adm" class="input" placeholder="R$" data-input="outros-despesas-adm">
 
                             <label for="total-despesas-adm" class="label__input label__input--total">Total:</label>
-                            <input type="number" id="total-despesas-adm" class="input__total" placeholder="R$" data-input="total-despesas-adm">
+                            <input type="number" id="total-despesas-adm" class="input__total" placeholder="R$" data-inputResultado="total-administrativas">
                         </fieldset>
 
                         <fieldset class=" formulario formulario__equipamentos" data-form="equipamentos">
@@ -117,7 +117,7 @@
 
 
                             <label for="total-equipamentos" class="label__input label__input--total">Total:</label>
-                            <input type="number" id="total-equipamentos" class="input__total" placeholder="R$" data-input="total-equipamentos">
+                            <input type="number" id="total-equipamentos" class="input__total" placeholder="R$" data-inputResultado="total-equipamentos">
                         </fieldset>
 
                         <fieldset class=" formulario  formulario__funcionarios" data-form="funcionarios">
@@ -142,13 +142,13 @@
                             <input type="number" id="outros-funcionarios" class="input" placeholder="R$" data-input="outros-funcionarios">
 
                             <label for="total-funcionarios" class="label__input label__input--total">Total:</label>
-                            <input type="number" id="total-funcionarios" class="input__total" placeholder="R$" data-input="total-funcionarios">
+                            <input type="number" id="total-funcionarios" class="input__total" placeholder="R$" data-inputResultado="total-funcionarios">
                         </fieldset>
 
                         <section class="container__resultado">
                             <div class="container__resultado--texto">
                                 <p class="texto__resultado--formulario">Custo fixo total:</p>
-                                <input type="number" class="input__resultado">
+                                <input type="number" class="input__resultado" data-resultado="custo-fixo">
                             </div>
                             <a href="#" class="botao botao__custo-fixo" data-form-button>Próximo</a>
                         </section>
