Criação do blog

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <body>
         <section class="corpo">
             <header class="cabecalho">
-                <img src="assets/imagens/logo-calculadora.png" alt="Logo da Calculadora de Preços" class="logo-calculadora__cabecalho">
-                <h1 class="titulo-calculadora-precos">Calculadora de Preços</h1>
+                <a href="#" class="botao__logo-calculadora"><img src="assets/imagens/logo-calculadora.png" alt="Logo da Calculadora de Preços" class="logo-calculadora__cabecalho"></a>
+                <a href="#" class="botao__titulo-calculadora"><h1 class="titulo-calculadora-precos">Calculadora de Preços</h1></a>
                 <a class="icone__menu--abrir"><img src="assets/imagens/icones/icone-menu-abrir.svg" alt="Menu" class="icone__menu"></a>
             </header>
             
@@ -319,8 +319,8 @@
                             <label for="iptu" class="label__input">Outras taxas (%):</label>
                             <input type="number" id="iptu" class="input" placeholder="%" data-input="taxas-outras">
 
-                            <label for="energia" class="label__input">Investimentos (%):</label>
-                            <input type="number" id="energia" class="input" placeholder="%" data-input="investimentos">
+                            <label for="impostos" class="label__input">Impostos (%):</label>
+                            <input type="number" id="impostos" class="input" placeholder="%" data-input="impostos">
 
                             <label for="agua" class="label__input">Margem de Lucro (%):</label>
                             <input type="number" id="agua" class="input" placeholder="%" data-input="margem-lucro">
@@ -367,40 +367,40 @@
 
 
             <aside class="menu">
-                <section class="menu__cabecalho">
-                    <a class="icone__menu--fechar"><img src="assets/imagens/icones/icone-menu-fechar.svg" alt="Menu" class=" icone__menu"></a>
-                </section>
+                <section class="menu__conteudo">
+                    <section class="menu__cabecalho">
+                        <a class="icone__menu--fechar"><img src="assets/imagens/icones/icone-menu-fechar.svg" alt="Menu" class=" icone__menu"></a>
+                    </section>
 
-                <section class="section__menu--mais">
-                    <h3 class="titulo__secundario titulo__menu--mais"><a href="#">Custos Fixos</a></h3>
-                    <ul class="lista__menu--mais">
-                        <li class="item__menu--mais"><a href="#">Despesas Estruturais</a></li>
-                        <li class="item__menu--mais"><a href="#">Despesas Administrativas</a></li>
-                        <li class="item__menu--mais"><a href="#">Despesas com Equipamentos</a></li>
-                        <li class="item__menu--mais"><a href="#">Despesas com Funcionários</a></li>
-                    </ul>
-                </section>
+                    <section class="section__menu--mais">
+                        <h3 class="titulo__secundario titulo__menu--mais"><a href="blog.html">Custos Fixos</a></h3>
+                        <ul class="lista__menu--mais">
+                            <li class="item__menu--mais"><a href="blog.html">Estruturais</a></li>
+                            <li class="item__menu--mais"><a href="blog.html">Administrativos</a></li>
+                            <li class="item__menu--mais"><a href="blog.html">Equipamentos</a></li>
+                            <li class="item__menu--mais"><a href="blog.html">Funcionários</a></li>
+                        </ul>
+                    </section>
 
-                <section class="section__menu--mais">
-                    <h3 class="titulo__secundario titulo__menu--mais"><a href="#">Capacidade Produtiva</a></h3>
-                    <ul class="lista__menu--mais">
-                        <li class="item__menu--mais"><a href="#">Produtividade</a></li>
-                    </ul>
-                </section>
+                    <section class="section__menu--mais">
+                        <h3 class="titulo__secundario titulo__menu--mais"><a href="blog.html">Capacidade Produtiva</a></h3>
+                    </section>
 
-                <section class="section__menu--mais">
-                    <h3 class="titulo__secundario titulo__menu--mais"><a href="#">Causto Fixo Unitário</a></h3>
-                </section>
+                    <section class="section__menu--mais">
+                        <h3 class="titulo__secundario titulo__menu--mais"><a href="blog.html">Custo Fixo Unitário</a></h3>
+                    </section>
 
-                <section class="section__menu--mais">
-                    <h3 class="titulo__secundario titulo__menu--mais"><a href="#">Custo Variável Unitário</a></h3>
-                </section>
+                    <section class="section__menu--mais">
+                        <h3 class="titulo__secundario titulo__menu--mais"><a href="blog.html">Custo Variável Unitário</a></h3>
+                    </section>
 
-                <section class="section__menu--mais">
-                    <h3 class="titulo__secundario titulo__menu--mais"><a href="#">Lucros, taxas e impostos</a></h3>
-                    <ul class="lista__menu--mais">
-                        <li class="item__menu--mais"><a href="#">Margem de Lucro</a></li>
-                    </ul>
+                    <section class="section__menu--mais">
+                        <h3 class="titulo__secundario titulo__menu--mais"><a href="blog.html">Lucros, taxas e impostos</a></h3>
+                        <ul class="lista__menu--mais">
+                            <li class="item__menu--mais"><a href="blog.html">Margem de Lucro</a></li>
+                            <li class="item__menu--mais"><a href="blog.html">Markup</a></li>
+                        </ul>
+                    </section>
                 </section>
             </aside>
 
